--- a/chatbot/parent/templates/student_info.html
+++ b/chatbot/parent/templates/student_info.html
@@ -170,7 +170,7 @@
             <p style="color: black; margin-bottom: 5px;">Identification Number</p>
             <input type="text" id="studentIC_{{ student.id }}" value="{{ student.identification_number }}" readonly>
             <p style="color: black; margin-bottom: 5px;">Current Book</p>
-            <input type="text" id="studentIC_{{ student.id }}" value="{{ student.current_book }}" readonly>
+            <input type="text" id="studentIC_{{ student.id }}" value="{{ student.book }}" readonly>
         </div>
     </div>
 </div>
