--- a/chatbot/teacher/templates/teaching_modules.html
+++ b/chatbot/teacher/templates/teaching_modules.html
@@ -18,7 +18,7 @@
 
 <p class="slide-in-left">Instruments</p>
 
-<div class="filter-buttons-container slide-in" style="max-width: 800px; position: relative;">
+<div class="filter-buttons-container slide-in" style="max-width: 800px; position: relative; visibility: hidden;">
     <div class="button-wrapper">
         {% for instrument_major in instrument_majors %}
         <button onclick="filterInstruments(this, '{{ instrument_major }}')" style="box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); border: 1px solid black;">
