--- a/chatbot/administrator/templates/learning_modules.html
+++ b/chatbot/administrator/templates/learning_modules.html
@@ -45,12 +45,19 @@
 }
 </style>
 
-<h1 style="font-size: 20px;" class="slide-in-left">Learning Modules</h1>
+<div class="header-container">
+    <h1 style="font-size: 20px;" class="slide-in-left">Learning Modules</h1>
+
+    <div id="navbar">
+        <a href="{% url 'modules' %}" class="navbar-link">Learning Modules</a>
+        <a href="{% url 'register-modules' %}" class="navbar-link">Register Instrument</a>
+    </div>
+</div>
 <hr>
 
 <p class="slide-in-left">Instruments</p>
 
-<div class="filter-buttons-container slide-in" style="max-width: 800px; position: relative;">
+<div class="filter-buttons-container slide-in" style="max-width: 800px; position: relative;visibility: hidden;">
     <div class="button-wrapper">
         {% for instrument in instruments %}
         <button onclick="filterInstruments(this, '{{ instrument.instrument_major_name }}', '{{ instrument.instrument_minor_name }}')" style="box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); border: 1px solid black;">
@@ -62,7 +69,7 @@
     <div class="scrollbar" style="cursor: pointer; margin-top: 10px;"></div>
 </div>
 
-<br><br>
+
 
 <!-- learning_modules.html -->
 
