--- a/chatbot/parent/templates/attendance.html
+++ b/chatbot/parent/templates/attendance.html
@@ -1,35 +1,344 @@
-{% extends "master_parent.html" %}
+{% extends 'master_parent.html' %}
 {% load static %}
 
 {% block content %}
-
 <script src="{% static 'js/navbar.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
 <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 <style>
 
-.activity-list {
-        border: 2px solid rgb(255, 255, 255);
-        border-radius: 10px;
-        padding: 20px;
-        margin-bottom: 10px;
-        position: relative;
-        cursor: pointer;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    p {
+        color: black;
     }
+    .emoji-text {
+        display: inline-block;
+        margin-right: 5px;
+    }
+
+    .month {
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .day {
+        font-size: 48px;
+        font-weight: bold;
+    }
+
+    .modal-header {
+        background-color: #165227;
+        color: white;
+    }
+
+    .custom-close-button {
+        border: none;
+        outline: none;
+        background: transparent;
+        padding: 0;
+        margin: 0;
+        box-shadow: none;
+        color: white;
+        font-size: 1.5rem;
+    }
+
+    .custom-close-button:hover,
+    .custom-close-button:focus {
+        outline: none;
+    }
+
+    .floating-button {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #165227;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        font-size: 24px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .absent {
+        color: red;
+    }
+
+    .attend {
+        color: green;
+    }
+
+    .floating-button:hover {
+        background-color: #148634;
+    }
+
+    .attendance-status {
+        font-size: 14px;
+        font-weight: bold;
+        float: right;
+    }
+
+    .modal-backdrop {
+        display: none;
+    }
+
+    .approved {
+        color: green;
+    }
+
+    .pending {
+        color: orange;
+    }
+
+    .attendance-record {
+        margin-bottom: 20px;
+    }
+
+    .attendance-info {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    hr {
+        border-top: 1px solid #ccc;
+        margin-top: 0;
+        margin-bottom: 15px;
+    }
+
+    .attendance-time {
+        display: inline;
+        float: right;
+        color: black;
+    }
+
+    /* Custom styles to remove the dark background overlay */
+    .modal-backdrop {
+        display: none;
+    }
+
+    .modal-footer-custom {
+            display: flex;
+            justify-content: flex-end;
+            gap: 10px; /* Adjust the gap between buttons if needed */
+        }
+
+        .char-count {
+            font-size: 12px;
+            color: gray;
+        }
 </style>
 
 <div class="header-container">
-    <h1 style="font-size: 20px;" class="slide-in-left">Student Attendance</h1>
+    <h1 style="font-size: 20px;" class="slide-in-left">Attendance</h1>
+    <!-- <div id="navbar">
+        <a href="{% url 'attendance' %}" class="navbar-link">Attendance List</a>
+        <a href="{% url 'leave' %}" class="navbar-link">Apply Leave</a>
+    </div> -->
 </div>
 
-<hr>
+<hr class="slide-in-left" style="margin-top: 10px;">
 
-<div>
+<p class="slide-in-left">Registered Students: {{ students|length }}</p>
 
-    <p>Activity Name</p>
+<div class="wrapper" style="margin-top: -35px;">
+    <div class="main">
+        <div class="container p-5 slide-in">
+            {% for student in students %}
+            <div class="row mb-3 justify-content-center align-items-center slide-in">
+                <div class="card mb-3" style="width: 90%; padding: 0; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4); border-radius: 10px;">
+                    <div class="card-body">
+                        <h5 class="card-title" style="font-size: 14px;">{{ student.studentName }}</h5>
+                        <button class="btn btn-outline-primary" data-toggle="collapse" href="#attendance{{ student.id }}" role="button" aria-expanded="false" aria-controls="attendance{{ student.id }}">
+                            View Attendance
+                        </button>
+                        <div class="collapse" id="attendance{{ student.id }}">
+                            <div class="card card-body mt-3">
+                                {% if student.attendance_set.all %}
+                                    {% for attendance in student.attendance_set.all %}
+                                        <div class="attendance-record">
+                                            <div class="attendance-info">
+                                                <p style="font-weight: bold;color: black;">
+                                                    {{ attendance.title }}
+                                                    <span class="attendance-time" style="font-weight: lighter; color: gray;">
+                                                        🕒{{ attendance.date }}  {{ attendance.start_time }} - {{ attendance.end_time }}
+                                                    </span>
+                                                </p>
+                                                <p style="color: black;">{{attendance.description}}</p>
+                                                <p class="attendance-status {{ attendance.status|lower }}">{{ attendance.status }}</p>
+                                                <p class="attendance-status {% if attendance.attendance == 'Absent' %}absent{% else %}attend{% endif %}" style="font-weight: medium; font-style: italic;float: left;">
+                                                    {{ attendance.attendance }}
+                                                    {% if attendance.status == "Pending Verification" and attendance.attendance == "Attend" %}
+                                                        <button class="btn btn-outline-primary verify-button"
+                                                                data-toggle="modal"
+                                                                data-target="#verificationModal"
+                                                                data-student-name="{{ student.studentName }}"
+                                                                data-attendance-title="{{ attendance.title }}"
+                                                                data-attendance-date="{{ attendance.date }}"
+                                                                data-attendance-start-time="{{ attendance.start_time }}"
+                                                                data-attendance-end-time="{{ attendance.end_time }}"
+                                                                data-attendance-id="{{ attendance.id }}"
+                                                                data-student-id="{{ student.id }}"
+                                                                style="margin-left: 10px; border-radius: 20px; background-color: #2f89fc; color: white; font-size: 14px;">
+                                                            Submit Absence
+                                                        </button>
+                                                    {% endif %}
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <hr>
+                                    {% endfor %}
+                                {% else %}
+                                    <p>No attendance records available.</p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
 </div>
 
-<div class="activity-list slide-in"></div>
+<!-- Modal -->
+<div class="modal fade" id="verificationModal" tabindex="-1" role="dialog" aria-labelledby="verificationModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" style="width: 600px;">
+            <div class="modal-header" style="margin-top: -20px; width: 110%; margin-left: -30px;">
+                <p class="modal-title" id="verificationModalLabel" style="color: white; margin-left: 250px;">Fill Absence</p>
+                <button type="button" class="close custom-close-button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="width: 300px;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><strong>Student Name:</strong></p>
+                    </div>
+                    <div class="col-md-6">
+                        <p><span id="modal-student-name"></span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><strong>Attendance Title:</strong></p>
+                    </div>
+                    <div class="col-md-6">
+                        <p><span id="modal-attendance-title"></span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><strong>Date:</strong></p>
+                    </div>
+                    <div class="col-md-6">
+                        <p><span id="modal-attendance-date"></span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><strong>Start Time:</strong></p>
+                    </div>
+                    <div class="col-md-6">
+                        <p><span id="modal-start-time"></span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><strong>End Time:</strong></p>
+                    </div>
+                    <div class="col-md-6">
+                        <p><span id="modal-end-time"></span></p>
+                    </div>
+                </div>
+
+                <form id="absenceReasonForm" action="{% url 'submit_absence' %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" id="student_id" name="student_id" value="{{ student.id }}">
+                    <input type="hidden" id="attendance_id" name="attendance_id" value="{{attendance.id}}">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <label for="absence_reason"><strong>Absence Reason:</strong></label>
+                            <textarea id="absence_reason" name="absence_reason" style="width: 200%; height: 150px; padding: 10px;resize: none;" maxlength="200" rows="4"></textarea>
+                            <div id="charCount" class="char-count">100 characters remaining</div>
+                        </div>
+                    </div>
+                    
+                    <div class="modal-footer modal-footer-custom">
+                        <!-- <button type="button" class="btn btn-secondary float-right" data-dismiss="modal">Cancel</button> -->
+                        <button type="submit" class="btn btn-primary" style="font-size: 14px;">Submit Absence</button>
+                        <div style="clear: both;"></div>
+                    </div>
+                </form>
+                
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function() {
+        // Function to handle click event for the verify button
+        $(document).on('click', '.verify-button', function() {
+            var studentName = $(this).data('student-name');
+            var attendanceTitle = $(this).data('attendance-title');
+            var attendanceDate = $(this).data('attendance-date');
+            var attendanceStartTime = $(this).data('attendance-start-time');
+            var attendanceEndTime = $(this).data('attendance-end-time');
+            var attendanceId = $(this).data('attendance-id'); // Assuming you have attendance ID in data attributes
+            var studentId = $(this).data('student-id'); // Retrieve student ID
+            $('#attendance_id').val(attendanceId); 
+            $('#student_id').val(studentId);
+
+            // Update the modal content with data
+            $('#modal-student-name').text(studentName);
+            $('#modal-attendance-title').text(attendanceTitle);
+            $('#modal-attendance-date').text(attendanceDate);
+            $('#modal-start-time').text(attendanceStartTime);
+            $('#modal-end-time').text(attendanceEndTime);
+            $('#verificationModal').data('attendance-id', attendanceId); // Store attendance ID in modal data
+
+            // Show the modal
+            $('#verificationModal').modal('show');
+        });
+
+        // Function to handle submission of absence reason
+        
+
+        // Function to toggle visibility of attendance containers and scroll to the top of the selected container
+        $('.btn.btn-outline-primary').click(function() {
+            var containerId = $(this).attr('href');
+            var isVisible = $(containerId).is(':visible');
+            $('.collapse').hide();
+            if (!isVisible) {
+                $(containerId).show();
+                $('html, body').animate({
+                    scrollTop: $(containerId).offset().top
+                }, 500);
+            }
+        });
+    });
+
+    $(document).ready(function() {
+            var maxLength = 100;
+            $('#absence_reason').on('input', function() {
+                var currentLength = $(this).val().length;
+                var remainingLength = maxLength - currentLength;
+                $('#charCount').text(remainingLength + ' characters remaining');
+            });
+        });
+</script>
+
+    
 {% endblock %}
